# COSC-4P80-Assignment-3

./: CMakeLists.txt  build_emscripten.sh  default.nix  plot_heatmap.py  plot_line_graph.py  renderdoc_settings.cap
include/assign3/: array.h  file.h  functions.h  fwdecl.h  manager.h  neuron.h  som.h  ui.h
results/bins-1000/5x5-2000/Edge-Wrapped-Grid/Random-Bounded-1/: activations.csv  quantization_avg.csv
results/bins-1000/5x5-2000/Edge-Wrapped-Grid/Random-Sample-1/: topological_avg.csv
results/bins-1000/5x5-2000/Edge-Wrapped-Grid/Random-Unit-1/: activations.csv  topological_avg.csv
results/bins-1000/5x5-2000/Edge-Wrapped-Honey-Comb/Random-Bounded-1/: activations.csv  topological_avg.csv
results/bins-1000/5x5-2000/Edge-Wrapped-Honey-Comb/Random-Sample-1/: activations.csv  activations_avg.csv  quantization_avg.csv
results/bins-1000/5x5-2000/Grid/Random-Sample-1/: quantization_avg.csv  topological_avg.csv
results/bins-1000/5x5-2000/Grid/Random-Unit-1/: activations_avg.csv  topological_avg.csv
results/bins-1000/5x5-2000/Honey-Comb-Grid/Random-Bounded-1/: activations.csv  activations_avg.csv
results/bins-1000/5x5-2000/Honey-Comb-Grid/Random-Sample-1/: activations.csv
results/bins-1000/5x5-2000/Honey-Comb-Grid/Random-Unit-1/: activations.csv  quantization_avg.csv
results/bins-1000/6x6-2000/Edge-Wrapped-Grid/Random-Bounded-1/: activations_avg.csv  quantization_avg.csv
results/bins-1000/6x6-2000/Edge-Wrapped-Grid/Random-Sample-1/: activations_avg.csv  quantization_avg.csv  topological_avg.csv
results/bins-1000/6x6-2000/Edge-Wrapped-Grid/Random-Unit-1/: quantization_avg.csv  topological_avg.csv
results/bins-1000/6x6-2000/Edge-Wrapped-Honey-Comb/Random-Bounded-1/: activations.csv  activations_avg.csv  topological_avg.csv
results/bins-1000/6x6-2000/Edge-Wrapped-Honey-Comb/Random-Sample-1/: activations.csv  activations_avg.csv  quantization_avg.csv  topological_avg.csv
results/bins-1000/6x6-2000/Edge-Wrapped-Honey-Comb/Random-Unit-1/: topological_avg.csv
results/bins-1000/6x6-2000/Grid/Random-Bounded-1/: activations.csv  activations_avg.csv  quantization_avg.csv  topological_avg.csv
results/bins-1000/6x6-2000/Grid/Random-Sample-1/: activations.csv  activations_avg.csv  topological_avg.csv
results/bins-1000/6x6-2000/Grid/Random-Unit-1/: activations.csv  activations_avg.csv
results/bins-1000/6x6-2000/Honey-Comb-Grid/Random-Bounded-1/: activations.csv  activations_avg.csv  quantization_avg.csv  topological_avg.csv
results/bins-1000/6x6-2000/Honey-Comb-Grid/Random-Sample-1/: activations.csv  activations_avg.csv
results/bins-1000/6x6-2000/Honey-Comb-Grid/Random-Unit-1/: activations.csv  activations_avg.csv  quantization_avg.csv
results/bins-1000/7x7-2000/Edge-Wrapped-Grid/Random-Bounded-1/: activations.csv  quantization_avg.csv
results/bins-1000/7x7-2000/Edge-Wrapped-Grid/Random-Sample-1/: activations.csv
results/bins-1000/7x7-2000/Edge-Wrapped-Grid/Random-Unit-1/: activations_avg.csv
results/bins-1000/7x7-2000/Edge-Wrapped-Honey-Comb/Random-Bounded-1/: activations.csv  quantization_avg.csv  topological_avg.csv
results/bins-1000/7x7-2000/Edge-Wrapped-Honey-Comb/Random-Unit-1/: activations.csv
src/: array.cpp  file.cpp  functions.cpp  main (conflicted copy 2024-11-18 194147).cpp  main.cpp  manager.cpp  neuron.cpp  som.cpp
(+1668 files in other folders)
